--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -4,14 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Start file\n"
+    "**Homework 1 Collaboration**\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test 1\n"
+    "Problem 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem 4"
    ]
   },
   {
