--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -12,8 +12,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Problem 1\n"
+    "Problem 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -63,10 +70,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Problem 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Input integer 7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n",
+      "28.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Input integer\"))\n",
+    "\n",
+    "for num in range(1,n):\n",
+    "    summation1 = sum(range(1, n + 1))\n",
+    "\n",
+    "comparison = n*((n + 1)/2)\n",
+    "    \n",
+    "print(summation1)\n",
+    "print(comparison)"
    ]
   },
   {
@@ -79,7 +126,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
