--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -17,45 +17,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T1: 02\n",
-      "T3: BGR//462503 -7814 092715 27039688   CON//432305 -5915 152916 29049789\n",
-      "\n",
-      "T5: 89\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_49360/2696068223.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'T3: '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'T5: '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m67\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m70\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnam_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m63\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m70\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+      "T1:  2 C\n",
+      "-2 C\n",
+      "-4 C\n"
      ]
     }
    ],
    "source": [
-    "from itertools import islice\n",
-    "\n",
     "station = 'CON'\n",
-    "fhr = 6\n",
+    "fhr = '06'\n",
     "nam_data = open('/home/rsc141/met325/example2/fous.txt', 'r')\n",
     "for line in nam_data:\n",
-    "    if station in line:\n",
-    "        print('T1: '+next(nam_data)[63:65])\n",
-    "        print('T3: '+(line))\n",
-    "        print('T5: '+(line)[67:70])\n",
-    "        next(nam_data)[63:70] = 9\n",
+    "    if line.startswith(fhr) and '896' in line:\n",
+    "        t1 = line[63:65]\n",
+    "        T1 = int(t1)\n",
+    "        t2 = line[65:67]\n",
+    "        T2 = int(t2)\n",
+    "        t3 = line[67:69]\n",
+    "        T3 = int(t3)\n",
+    "        t_list = [T1,T2,T3]\n",
+    "        for t in t_list:\n",
+    "            if t > 50:\n",
+    "                print(t-100,'C')\n",
+    "            else:\n",
+    "                print('T1: ',t,'C')\n",
     "        \n",
+    "            \n",
+    "    \n",
+    "\n",
+    "\n",
     "    "
    ]
   },
