--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,8 +25,10 @@
      "output_type": "stream",
      "text": [
       "T1:  2 C\n",
-      "-2 C\n",
-      "-4 C\n"
+      "T3:  -2 C \n",
+      "\n",
+      "T3:  -4 C \n",
+      "\n"
      ]
     }
    ],
@@ -45,7 +47,7 @@
     "        t_list = [T1,T2,T3]\n",
     "        for t in t_list:\n",
     "            if t > 50:\n",
-    "                print(t-100,'C')\n",
+    "                print('T3: ',t-100,'C',\"\\n\") \n",
     "            else:\n",
     "                print('T1: ',t,'C')\n",
     "        \n",
