Last commit from before

--- a/my_code.ipynb
+++ b/my_code.ipynb
@@ -35,14 +35,16 @@
    "id": "dress-christianity",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = np.cos(2)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "met212 (Python 3)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3-met212"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
