Attempt on problem 3

--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -107,10 +107,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.30842513753404244\n",
+      "-0.30842513753404244\n",
+      "-0.30842513753404244\n",
+      "-0.30842513753404244\n",
+      "-0.30842513753404244\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "n = 5\n",
+    "x = np.pi/4\n",
+    "c0 = 1\n",
+    "j = 1\n",
+    "\n",
+    "cxn = 0\n",
+    "for i in range(0, 5): \n",
+    "    cxn = -c0*(x**2)/(2*j)*(2*j-1)\n",
+    "    print(cxn)"
+   ]
   },
   {
    "cell_type": "markdown",
